--- a/src/components/_customer-support.scss
+++ b/src/components/_customer-support.scss
@@ -4,7 +4,8 @@
   align-items: center;
   background-color: #f9f9f9;
   padding: 10px;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
+  margin-top: 20px;
   width: 100%;
   @media only screen and (max-width: 768px) {
     flex-direction: column;
