--- a/src/components/_product-card-left-right.scss
+++ b/src/components/_product-card-left-right.scss
@@ -40,7 +40,7 @@
     .add-to-cart {
       font-size: 1rem;
       padding: 10px 20px;
-      background-color: #008CBA;
+      background-color: #e38d02;
       color: #fff;
       border: none;
       border-radius: 4px;
