--- a/src/components/_product-card.scss
+++ b/src/components/_product-card.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  
+  margin-bottom: 20px;
   img {
     width: 100%;
     height: auto;
@@ -47,7 +47,7 @@
       cursor: pointer;
       
       &:hover {
-        background-color: #c00;
+        background-color: rgb(227, 119, 3);
       }
     }
   }
