--- a/src/components/_product-collection.scss
+++ b/src/components/_product-collection.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin: 50px 0;
+  margin: 10px 0;
 
   .collection {
     width: calc(33.33% - 30px);
