--- a/src/components/_reviews.scss
+++ b/src/components/_reviews.scss
@@ -2,6 +2,7 @@
 .reviews {
   background-color: #f9f9f9;
   padding: 10px 10px;
+  margin-bottom: 20px;
   
   .reviews-title {
     font-size: 24px;
